add Twitter Follow button.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
       box-shadow: none;
     }
 
-    .twitter-share-button {
+    .twitter-buttons {
       display: block;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 0 auto;
     }
 
     .example-output {
@@ -87,7 +86,10 @@
         https://color.now.sh/5362b5
       </a>
 
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="A simple micro-service for color functions when writing CSS." data-url="https://color.now.sh/" data-via="justinlicata" data-related="" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <div class="twitter-buttons">
+        <a href="https://twitter.com/share" class="twitter-share-button" data-text="A simple micro-service for color functions when writing CSS." data-url="https://color.now.sh/" data-via="justinlicata" data-related="" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        <a href="https://twitter.com/justinlicata" class="twitter-follow-button" data-show-count="false">Follow @justinlicata</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </div>
     </section>
 
     <div class="example-output">
